# carolina-storm-intelligence-public

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  eval-regression.yml  live-data.yml  pages.yml
.streamlit/: config.toml
conf/: config.yaml  experiments.yaml  models.yaml
conf/prompts/: judge_groundedness.jinja  rag_v1.jinja  rag_v2.jinja
dashboards/: Home.py  _bootstrap.py  weather_intelligence.html
dashboards/pages/: 1_Model_Evaluation.py  2_Experiment_Tracking.py  3_Storm_Center.py
data/live/: active_storms.json
data/samples/: buoy_sample.csv  eval_set.jsonl  hurdat2_sample.txt  nws_products_sample.json  storm_events_sample.csv
dbt/storm_eval/: dbt_project.yml  profiles.yml
docker/: Dockerfile.api  Dockerfile.eval  docker-compose.yml
docs/: architecture.md  data_sources.md  evaluation_methodology.md  live_data_plan.md  setup.md
notebooks/: 01_bronze_ingest.py  02_silver_conform.py  03_gold_truth.py  04_index_and_evaluate.py  README.md
scripts/: _weather_template.html  build_index.py  build_weather_page.py  eval_gate.py  fetch_live_snapshot.py  run_experiment.py  run_local_pipeline.py  train_forecaster.py
sql/analytics/: cost_latency_tradeoff.sql  hallucination_by_storm.sql  model_leaderboard.sql
sql/ddl/: 01_eval_schema.sql  02_prompts.sql  03_ground_truth.sql  04_preference.sql
src/storm_eval/: __init__.py  config.py  db.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_ab_test.py  test_chunking.py  test_forecasting.py  test_ground_truth.py  test_hurdat2.py  (+2 more)
(+45 files in other folders)
