[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "storm-eval"
version = "0.1.0"
description = "LLM Evaluation & Continuous-Improvement Platform on NOAA coastal-storm data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E702: allow compact grouped statements (e.g. dataclass field rows, short setup lines).
ignore = ["E702"]
